# alphazero-cpp

./: .gitignore  CMakeLists.txt
include/: az_net.hpp  mcts.hpp  nn.hpp  othello.hpp  reference_mcts.hpp  tictactoe.hpp
src/: az_net.cpp  main.cpp  main_inference.cpp  main_test.cpp  main_train.cpp  mcts.hpp  tictactoe.cpp  tictactoe.hpp
